--- a/index.html
+++ b/index.html
@@ -40,28 +40,17 @@
     </head>
     <body>
         <div class="container">
-            <div class="row navigation">
-                <div class="span2 logo">
-                    Logo
-                </div>
-                <div class="span6 blank">
-                    Blank
-                </div>
-                <div class="span4 about">
-                    About
-                </div>
-            </div>
-            <div class="row heading">
+            <div class="row-fluid heading">
                 <div class="span12">
-                    <h1>Bitstarter Title</h1>
+                    <h1>Product</h1>
                 </div>
             </div>
-            <div class="row subheading">
+            <div class="row-fluid subheading">
                 <div class="span12">
-                    <p class="lead">This is my first bitstarter project.</p>
+                    <p class="lead">One sentence description.</p>
                 </div>
             </div>
-            <div class="row pitch">
+            <div class="row-fluid pitch">
                 <div class="span6 video">
                     Video
                 </div>
