reorganized action buttons

--- a/index.html
+++ b/index.html
@@ -54,15 +54,26 @@
                 <div class="span6 video">
                     Video
                 </div>
-                <div class="span6">
-                    <div class="thermometer">
-                        Thermometer
+
+                <!-- actions div contains stats, order, and share -->
+                <div class="span5 actions">
+                    <div class="span8 offset2">
+                        <div class="statistics">
+                        </div>
                     </div>
-                    <div class="order">
-                        Order
+                    <div class="span10 offset1">
+                        <!-- bootstrap progress bar -->
+                        <div class="thermometer progress active">
+                            <div class="bar bar-success" style="width: 60%;"></div>
+                            <div class="bar bar-warning" style="width: 40%;"></div>
+                        </div>
                     </div>
-                    <div class="social">
-                        Social
+                    <div class="span6 offset3 order">
+                        <button class="btn btn-success btn-large">Preorder</button>
+                    </div>
+                    <div class="span8 offset2 social">
+                        <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+                        <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
                     </div>
                 </div>
             </div>
