fluid rows for marketing and footer

--- a/index.html
+++ b/index.html
@@ -77,22 +77,32 @@
                     </div>
                 </div>
             </div>
-            <div class="row section1">
-                <div class="span12">
+
+            <!-- Marketing -->
+            <div class="row-fluid section1">
+                <div class="span5 offset1 asset">
                     Marketing Section 1
                 </div>
-            </div>
-            <div class="row section2">
-                <div class="span12">
-                    Marketing Section 2
+                <div class="span5 copy">
+                    <p>
+                    </p>
                 </div>
             </div>
-            <div class="row faq">
+            <div class="row-fluid section2">
+                <div class="span5 offset1 copy copy-right">
+                    <p>
+                    </p>
+                </div>
+                <div class="span5 asset">
+                    Marketing section 2
+                </div>
+            </div>
+            <div class="row-fluid faq">
                 <div class="span12">
                     FAQ
                 </div>
             </div>
-            <div class="row footer">
+            <div class="row-fluid footer">
                 <div class="span12">
                     Footer
                 </div>
