--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
                 }
             }
 
+            /* All form factors */
             body {
-                padding-top: 20px;
-                padding-bottom: 40px;
+                font-family: 'Open Sans', Helvetica, Arial, sans-serif;
             }
-            .container {
-                width: 960px;
+            .heading, .subheading {
+                font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+                text-align: center;
             }
             p.lead {
-                padding-top: 15px;
+                padding-top: 1.5%;
+                font-size: 24px;
+                line-height: 30px;
             }
+            p {
+                font-size: 18px;
+                line-height: 24px;
+            }
+
             .navigation, .pitch, .section1, .section2, .faq, .footer {
                 padding: 10px 0px 10px 0px;
             }
