--- a/index.html
+++ b/index.html
@@ -113,6 +113,22 @@
                 <div class="span5 actions">
                     <div class="span8 offset2">
                         <div class="statistics">
+                            <div class="span4">
+                                <!-- linedivs are dividing lines that look different in vertical and horizontal -->
+                                <div class="linediv-l">
+                                    <h3>1000</h3> <p>backers</p>
+                                </div>
+                            </div>
+                            <div class="span4">
+                                <div class="linediv-c">
+                                    <h3>$6000</h3> <p>of $10,000</p>
+                                </div>
+                            </div>
+                            <div class="span4">
+                                <div class="linediv-r">
+                                    <h3>10</h3> <p>days left</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="span10 offset1">
