--- a/index.html
+++ b/index.html
@@ -151,20 +151,32 @@
             <!-- Marketing -->
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
-                    Marketing Section 1
+                    <img class="img-polaroid" src="http://placehold.it/480x300">
                 </div>
                 <div class="span5 copy">
                     <p>
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
                     </p>
                 </div>
             </div>
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p>
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
                     </p>
                 </div>
                 <div class="span5 asset">
-                    Marketing section 2
+                    <img class="img-polaroid" src="http://placehold.it/480x300">
                 </div>
             </div>
             <div class="row-fluid faq">
