--- a/index.html
+++ b/index.html
@@ -236,11 +236,15 @@
                     </div>
                 </div>
             </div>
+
+            <!-- CC license -->
             <div class="row-fluid footer">
                 <div class="span12">
-                    Footer
+                    <p>This work is licensed under the
+                    <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>,
+                    without all the cruft that would otherwise be put at the bottom of the page.</p>
                 </div>
             </div>
         </div>
     </body>
-    </html>
+</html>
