--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Bitstarter</a>
+                    <a class="brand" href="#">PeerIDE</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -125,12 +125,12 @@
             </div>
             <div class="row-fluid subheading">
                 <div class="span12">
-                    <p class="lead">One sentence description.</p>
+                    <p class="lead">A peer-to-peer, collaborative interactive development environment with real-time video.</p>
                 </div>
             </div>
             <div class="row-fluid pitch">
                 <div class="span5 offset1 video">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/KvXdiw6.png">
                 </div>
 
                 <!-- actions div contains stats, order, and share -->
@@ -140,17 +140,17 @@
                             <div class="span4">
                                 <!-- linedivs are dividing lines that look different in vertical and horizontal -->
                                 <div class="linediv-l">
-                                    <h3>1000</h3> <p>backers</p>
+                                    <h3>1</h3> <p>backers</p>
                                 </div>
                             </div>
                             <div class="span4">
                                 <div class="linediv-c">
-                                    <h3>$6000</h3> <p>of $10,000</p>
+                                    <h3>$1</h3> <p>of $100</p>
                                 </div>
                             </div>
                             <div class="span4">
                                 <div class="linediv-r">
-                                    <h3>10</h3> <p>days left</p>
+                                    <h3>10000</h3> <p>days left</p>
                                 </div>
                             </div>
                         </div>
@@ -175,30 +175,27 @@
             <!-- Marketing -->
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/KvXdiw6.png">
                 </div>
                 <div class="span5 copy">
                     <p>
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Code with your friends, colleagues, and class partners anywhere you want.
+                        PeerIDE is not just a text editor; it supports debugging tools,
+                        syntax checkers, and an interactive console. Also, with real-time
+                        video and voice chat, you'll never miss anything.
                     </p>
                 </div>
             </div>
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p>
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
-                        Lorem ipsum dolor sit amet. Dulce et decorum est, pro patria mori.
+                        Since PeerIDE is built on WebRTC technology, all communication is
+                        peer-to-peer. That means you will always be able to connect with
+                        your coding partner wherever and whenever you want to.
                     </p>
                 </div>
                 <div class="span5 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/FMl9Vps.png">
                 </div>
             </div>
 
@@ -210,12 +207,12 @@
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                                    What does FAQ stand for?
+                                    Why would I use this?
                                 </a>
                             </div>
                             <div id="collapseOne" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Frequently Asked Question.
+                                    Coding is fun. WebRTC is new and cool. Your communication does not go through a central server.
                                 </div>
                             </div>
                         </div>
@@ -223,12 +220,12 @@
                         <div class="accordion-group">
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                                    What's a Frequently Asked Question?
+                                    Will this be fast?
                                 </a>
                             </div>
                             <div id="collapseTwo" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    A question which is commonly asked by users.
+                                    Probably not. We'll start off supporting only interpreted languages. Maybe those will work better.
                                 </div>
                             </div>
                         </div>
